--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
   <div class="root">
     <header class="header">
       <img src='./images/header-logo.svg' alt="Логотип" class="header__logo">
-      <div class="header__lang-links">
-        <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-        <a href="#" class="header__lang-link header__lang-link_non-active">En</a>
-      </div>
+      <ul class="header__lang-links">
+        <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
+        <li><a href="#" class="header__lang-link">En</a></li>
+      </ul>
     </header>
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь</p>
-        <img src="./images/lead-polka.jpg" alt="Человек на полке" class="lead__image">
-        <p class="lead__caption">Ваша полка - верхняя</p>
+        <figure class="lead__image-block">
+          <img src="./images/lead-polka.jpg" alt="Человек на полке" class="lead__image">
+          <figcaption class="lead__caption">Ваша полка - верхняя</figcaption>
+        </figure>
       </section>
       <section class="intro">
         <p class="intro__title">Чего мы там не видели?</p>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_spanned">Часовых поясов</span> 11</li>
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_spanned">Объектов природного наследия ЮНЕСКО</span> 12</li>
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_spanned">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_spanned">Природных заповедников</span> 105</li>
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_spanned">Аэропортов</span> 241</li>
+          <li class="intro__list-item"><span class="intro__span">Часовых поясов</span> 11</li>
+          <li class="intro__list-item"><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+          <li class="intro__list-item"><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+          <li class="intro__list-item"><span class="intro__span">Природных заповедников</span> 105</li>
+          <li class="intro__list-item"><span class="intro__span">Аэропортов</span> 241</li>
         </ul>
       </section>
       <section class="photo-grid">
@@ -48,61 +50,99 @@
         <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
       </section>
       <section class="places">
-        <div class="place">
-          <p class="place__heading">Куршская коса</p>
-          <p class="place__url">URL<a href="http://park-kosa.ru" class="place__link"><br>park-kosa.ru</a></p>
+        <article class="place">
+          <div class="place__title">
+            <p class="place__heading">Куршская коса</p>
+            <div class="place__url-block">
+              <p class="place__url">URL</p>
+              <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+            </div>
+          </div>
           <div class="place__description">
             <img src="./images/place-kosa.jpg" alt="Коса" class="place__image">
-            <p class="place__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.<br><br>На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
-          </div>
-        </div>
-        <div class="place">
-            <p class="place__heading">Кольский</p>
-            <p class="place__url">URL<a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link"><br>National Geographic</a></p>
-            <div class="place__description">
-              <img src="./images/place-kosa.jpg" alt="Кольский" class="place__image">
-              <p class="place__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.<br><br>Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+            <div class="place__text-block">
+              <p class="place__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+              <p class="place__text">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
             </div>
-        </div>
-        <div class="place">
-          <p class="place__heading">Алтай</p>
-          <p class="place__url">URL<a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link"><br>Facebook</a></p>
+          </div>
+        </article>
+        <article class="place">
+          <div class="place__title">
+            <p class="place__heading">Кольский</p>
+            <div class="place__url-block">
+              <p class="place__url">URL</p>
+              <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+            </div>
+          </div>
+          <div class="place__description">
+            <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
+            <div class="place__text-block">
+              <p class="place__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+              <p class="place__text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+            </div> 
+          </div>
+        </article>
+        <article class="place">
+          <div class="place__title">
+            <p class="place__heading">Алтай</p>
+            <div class="place__url-block">
+              <p class="place__url">URL</p>
+              <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
+            </div>
+          </div>
           <div class="place__description">
             <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
-            <p class="place__text">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.<br><br>Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+            <div class="place__text-block">
+              <p class="place__text">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+              <p class="place__text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+            </div>
           </div>
-        </div>  
-        <div class="place">
-          <p class="place__heading">Зимний Байкал</p>
-          <p class="place__url">URL<a href="https://vk.com/baikalmile" class="place__link"><br>https://vk.com/baikalmile</a></p>
+        </article>  
+        <article class="place">
+          <div class="place__title">
+            <p class="place__heading">Зимний Байкал</p>
+            <div class="place__url-block">
+              <p class="place__url">URL</p>
+              <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+            </div>
+          </div>
           <div class="place__description">
             <img src="./images/place-winter-baikal.jpg" alt="Байкал" class="place__image">
-            <p class="place__text">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.<br><br>Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+            <div class="place__text-block">
+              <p class="place__text">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+              <p class="place__text">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+            </div>
           </div>
-        </div> 
-        <div class="place">
-          <p class="place__heading">Карелия</p>
-          <p class="place__url">URL<a href="http://vodlozero.ru" class="place__link"><br>http://vodlozero.ru/</a></p>
+        </article> 
+        <article class="place">
+          <div class="place__title">
+            <p class="place__heading">Карелия</p>
+            <div class="place__url-block">
+              <p class="place__url">URL</p>
+              <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+            </div>
+          </div>
           <div class="place__description">
             <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
             <p class="place__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
-        </div>       
+        </article>       
       </section>
       <section class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <div class="cover__overlay"></div></a>
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes - путешствие от столицы до Байкала на электричках</p>
+          <div class="cover__overlay"></div>
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes - путешствие от столицы до Байкала на электричках</p></a>
       </section>
     </main>
     <footer class="footer">
       <nav class="footer__navigation">
-        <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-        <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-        <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-        <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-        <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+        <ul class="footer__links">
+          <li class="footer__url"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+          <li class="footer__url"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li class="footer__url"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li class="footer__url"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li class="footer__url"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
       </nav>
       <p class="footer__copiright">&#169; 2020. Беляев Антон</p>
     </footer>
