--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <div class="place__title">
             <p class="place__heading">Куршская коса</p>
             <div class="place__url-block">
-              <p class="place__url">URL</p>
-              <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+              <p class="place__url">url</p>
+              <a target="_blank" href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
             </div>
           </div>
           <div class="place__description">
@@ -70,8 +70,8 @@
           <div class="place__title">
             <p class="place__heading">Кольский</p>
             <div class="place__url-block">
-              <p class="place__url">URL</p>
-              <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+              <p class="place__url">url</p>
+              <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
             </div>
           </div>
           <div class="place__description">
@@ -86,8 +86,8 @@
           <div class="place__title">
             <p class="place__heading">Алтай</p>
             <div class="place__url-block">
-              <p class="place__url">URL</p>
-              <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
+              <p class="place__url">url</p>
+              <a target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
             </div>
           </div>
           <div class="place__description">
@@ -102,8 +102,8 @@
           <div class="place__title">
             <p class="place__heading">Зимний Байкал</p>
             <div class="place__url-block">
-              <p class="place__url">URL</p>
-              <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+              <p class="place__url">url</p>
+              <a target="_blank" href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
             </div>
           </div>
           <div class="place__description">
@@ -118,8 +118,8 @@
           <div class="place__title">
             <p class="place__heading">Карелия</p>
             <div class="place__url-block">
-              <p class="place__url">URL</p>
-              <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+              <p class="place__url">url</p>
+              <a target="_blank" href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
             </div>
           </div>
           <div class="place__description">
@@ -130,9 +130,9 @@
       </section>
       <section class="cover">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-          <div class="cover__overlay"></div>
           <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes - путешствие от столицы до Байкала на электричках</p></a>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes - путешствие от столицы до Байкала на электричках</p>
+        </a>
       </section>
     </main>
     <footer class="footer">
@@ -143,6 +143,7 @@
           <li class="footer__url"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
           <li class="footer__url"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
           <li class="footer__url"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+        </ul>
       </nav>
       <p class="footer__copiright">&#169; 2020. Беляев Антон</p>
     </footer>
