--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="places">
         <article class="place">
           <div class="place__title">
-            <p class="place__heading">Куршская коса</p>
+            <h2 class="place__heading">Куршская коса</h2>
             <div class="place__url-block">
               <p class="place__url">url</p>
               <a target="_blank" href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
@@ -68,7 +68,7 @@
         </article>
         <article class="place">
           <div class="place__title">
-            <p class="place__heading">Кольский</p>
+            <h2 class="place__heading">Кольский</h2>
             <div class="place__url-block">
               <p class="place__url">url</p>
               <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
@@ -84,7 +84,7 @@
         </article>
         <article class="place">
           <div class="place__title">
-            <p class="place__heading">Алтай</p>
+            <h2 class="place__heading">Алтай</h2>
             <div class="place__url-block">
               <p class="place__url">url</p>
               <a target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
@@ -100,7 +100,7 @@
         </article>  
         <article class="place">
           <div class="place__title">
-            <p class="place__heading">Зимний Байкал</p>
+            <h2 class="place__heading">Зимний Байкал</h2>
             <div class="place__url-block">
               <p class="place__url">url</p>
               <a target="_blank" href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
@@ -116,7 +116,7 @@
         </article> 
         <article class="place">
           <div class="place__title">
-            <p class="place__heading">Карелия</p>
+            <h2 class="place__heading">Карелия</h2>
             <div class="place__url-block">
               <p class="place__url">url</p>
               <a target="_blank" href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
@@ -129,7 +129,7 @@
         </article>       
       </section>
       <section class="cover">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a target="_blank" class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes - путешствие от столицы до Байкала на электричках</p>
         </a>
@@ -138,11 +138,11 @@
     <footer class="footer">
       <nav class="footer__navigation">
         <ul class="footer__links">
-          <li class="footer__url"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-          <li class="footer__url"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-          <li class="footer__url"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-          <li class="footer__url"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-          <li class="footer__url"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+          <li class="footer__url"><a target="_blank" class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+          <li class="footer__url"><a target="_blank" class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+          <li class="footer__url"><a target="_blank" class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+          <li class="footer__url"><a target="_blank" class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+          <li class="footer__url"><a target="_blank" class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
         </ul>
       </nav>
       <p class="footer__copiright">&#169; 2020. Беляев Антон</p>
